# nbb

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: linters.yml
nbb/: backend.py  cli.py  nbb_conf.toml
nbb/tests/: request_departure_not_found.json  request_no_realtime_schedules_found.json  request_success.json  test_backend.py
src/nbb/: __init__.py  api_call.py  backend.py  bot_discord.py  cli.py  config.py  idfm.py  models.py  nbb_conf.toml
tests/: request_line_not_found.json  test_backend.py
